Completely basic and unusable timer.

--- a/src/index.html
+++ b/src/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
   <title>jjtimer</title>
+  <script src="../build/app.js"></script>
 </head>
 <body>
-
+<div id="time"></div>
+<div id="session"></div>
 </body>
 </html>
