Add some css styles.
Just change the font to something slightly more readable.

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 <head>
   <title>jjtimer</title>
   <script src="../build/app.js"></script>
+  <link rel="stylesheet" href="css/jjtimer.css">
 </head>
 <body>
 <div id="time"></div>
