Add a 'session average' label.

--- a/src/index.html
+++ b/src/index.html
@@ -8,5 +8,6 @@
 <body>
 <div id="time"></div>
 <div id="session"></div>
+<div id="stats"><span>session average: <span id="avg">DNF</span></span></div>
 </body>
 </html>
