Make the session stats show/hide depending on how many solves in the session.

--- a/src/index.html
+++ b/src/index.html
@@ -16,9 +16,9 @@
 <div id="scramble"></div>
 <div id="stats">
   <span>times: <span id="session-count">0</span></span>
-  <span>session average: <span id="avg">DNF</span></span>
-  <span>current average: <span id="current-avg-5">DNF</span>, <span id="current-avg-12">DNF</span></span>
-  <span>best average: <span id="best-avg-5">DNF</span>, <span id="best-avg-12">DNF</span></span>
+  <span id="session-avg-outer">session average: <span id="session-avg">DNF</span></span>
+  <span id="current-avg-all-outer">current average: <span id="current-avg-5">DNF</span><span id="current-avg-12-outer">, <span id="current-avg-12">DNF</span></span></span>
+  <span id="best-avg-all-outer">best average: <span id="best-avg-5">DNF</span><span id="best-avg-12-outer">, <span id="best-avg-12">DNF</span></span></span>
 <a href="javascript:;" class="options">options</a>
 </div>
 </div>
