Initial port of SessionFormatter to React.

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>jjtimer</title>
+  <script src="js/react.js"></script>
   <script src="../build/app.js"></script>
   <link rel="stylesheet" href="css/jjtimer.css">
   <style type="text/css" id="user-style"></style>
