--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <script src="../build/app.js"></script>
   <link rel="stylesheet" href="css/jjtimer.css">
   <style type="text/css" id="user-style"></style>
-  <meta name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=0;">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 </head>
 <body>
 <div id="content">
