Replace CSS classes 'show' and 'hide' with 'toggle-options'.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
 <div id="content">
 <div id="left">
 <div id="detail" class="hide-detail"></div>
-<div id="top" class="show">
+<div id="top">
 <div id="time">ready</div>
 <div id="scramble"></div>
 <div id="stats">
@@ -22,7 +22,7 @@
 <a href="javascript:;" class="options">options</a>
 </div>
 </div>
-<div id="options" class="show">
+<div id="options">
 <p><a href="javascript:;" class="options">options</a></p>
 <p>
 <h4>Scramble</h4>
