Remove href='javascript:;' and add cursor: pointer to get the same styling.

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>jjtimer</title>
-  <script src="../build/app.js"></script>
+  <script type="text/javascript" src="../build/app.js"></script>
   <link rel="stylesheet" href="css/jjtimer.css">
   <style type="text/css" id="user-style"></style>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -19,11 +19,11 @@
   <span id="session-avg-outer">session average: <span id="session-avg">DNF</span></span>
   <span id="current-avg-all-outer">current average: <span id="current-avg-5">DNF</span><span id="current-avg-12-outer">, <span id="current-avg-12">DNF</span></span></span>
   <span id="best-avg-all-outer">best average: <span id="best-avg-5">DNF</span><span id="best-avg-12-outer">, <span id="best-avg-12">DNF</span></span></span>
-<a href="javascript:;" class="options">options</a>
+<a class="options">options</a>
 </div>
 </div>
 <div id="options">
-<p><a href="javascript:;" class="options">options</a></p>
+<p><a class="options">options</a></p>
 <p>
 <h4>Scramble</h4>
 <select id="scramblers"></select>
